Bug 256035 - Lokalize use its own broken version of msgcat
Summary: Lokalize use its own broken version of msgcat
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.0
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Nick Shaforostoff
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-04 11:28 UTC by David Prévot
Modified: 2010-12-07 16:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Prévot 2010-11-04 11:28:15 UTC
Version:           1.0 (KDE 4.3) (using KDE 4.4.5) 
OS:                Linux

Hi,

When editing a PO file, every string lengths are modified, but not the same way msgcat does.

It's very annoying since one need to use msgcat before sending his|her file, even after correcting a tiny typo, in order not to produce an unnecessary and unreadable huge diff on VCS.

Regards

David



Reproducible: Always




OS: Linux (x86_64) release 2.6.34-1-amd64
Compiler: cc
Comment 1 Nick Shaforostoff 2010-11-15 11:09:32 UTC
a quick workaround is to add a kross script that runs on every file save and alignes it appropriately

http://websvn.kde.org/trunk/l10n-kde4/scripts/lokalize/
http://websvn.kde.org/trunk/l10n-kde4/ru/lokalize-scripts/
it should connect to fileSaved signal
Comment 2 Nick Shaforostoff 2010-12-07 16:56:30 UTC
SVN commit 1204495 by shaforo:

imitate gettext utils line wrapping better

BUG:256035
its very unlikely i will rewrite gettext parsing routines to use gettext library, but at least i made lokalize imitate gettext utilities more.
please check (starting with KDE RC1 if you don't compile yourself) if the new behaviour produces nice diffs



 M  +13 -10    gettextexport.cpp  
 M  +1 -1      gettextexport.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1204495