imitate gettext utils line wrapping better

BUG:256035
its very unlikely i will rewrite gettext parsing routines to use gettext library, but at least i made lokalize imitate gettext utilities more.
please check (starting with KDE RC1 if you don't compile yourself) if the new behaviour produces nice diffs


svn path=/trunk/KDE/kdesdk/lokalize/; revision=1204495